# zetaone-1

./: .gitignore  LICENSE  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  test_local.py
configs/: logging.yaml  policy_registry.yaml  settings.yaml
docker/: Dockerfile  docker-compose.yml  preload_models.py
docs/: api.md  architecture.md  deploy-gcp-step-by-step.md  policies.md
migrations/: add_evidence_violation_link.sql  add_idempotency_key.sql  add_violations_table.sql  create_api_keys_table.sql
ontology/: ONTOLOGY_MAP.md  README.md  corpus_version.yaml  mappings.yaml  policy_versions.yaml  validate.py
scripts/: clean_redeploy_cloud_run.sh  init_db.py  run_dev.sh  run_local_check.sh  seed_policies.py
tests/: test_api_image_upload.py  test_asr_extractor.py  test_asr_policy.py  test_compliance_graph_full.py  test_document_builder.py  test_document_regression.py  test_domain_registry.py  test_dsl_evaluator.py  test_embedding_extractor.py  test_end_to_end.py  test_evidence_graph.py  test_explainability_document.py  test_extractor_plan.py  test_extractor_registry.py  test_graph_api.py  test_graph_builder.py  test_ocr_extractor.py  test_persistence.py  test_pipeline_fast_path.py  test_policy_engine_document_centric.py  test_policy_engine_dsl_pilot.py  test_policy_engine_violation_output.py  test_policy_pack_loader.py  test_policy_retrieval.py  test_real_extractors_smoke.py  test_resolve_domain.py  test_text_extractor.py  test_violation_service.py  test_vision_extractor.py  test_vlm_extractor.py  test_zataone_pipeline.py  (+1 more)
web/: README.md  index.html  (+2 more)
(+147 files in other folders)
